--- a/src/components/candidate/_candidateHome.scss
+++ b/src/components/candidate/_candidateHome.scss
@@ -1,9 +1,9 @@
-
+@import '../../constants.scss';
 
 .btn-applied {
     color: white;
     font-size: 1rem;
-    border: 1px solid #43AFFF;
+    border: 1px solid $primary-color-blue;
     border-radius: 5px;
     width: 148px;
     height: 46px;
